# virus-vs-toilettenpapier

./: README.md
client/: package-lock.json  package.json  rollup.config.js
client/public/: global.css  index.html
client/src/: App.svelte
client/src/Components/: Banner.svelte  ContentPage.svelte  CrowdednessSlider.svelte  CurrentLocation.svelte  DataEntry.svelte  GeoLoc.svelte  GoodsUnavailable.svelte  Map.svelte  Navbar.svelte  SearchStore.svelte  consts.js
client/src/Data/: data.js
client/src/Routes/: Route.js
client/src/Views/: AddLocation.svelte  Index.svelte
server/: Cargo.toml  docker-compose.yml
server/.github/workflows/: build.yml
server/api/: Cargo.toml  docker-compose.yml
server/api/migrations/2020-03-20-224603_create_checkin_table/: down.sql
server/api/src/: handlers.rs  main.rs  model.rs  schema.rs
server/migrations/2020-03-20-212756_bootstrap/: down.sql  up.sql
server/migrations/2020-03-20-224603_create_checkin_table/: down.sql  up.sql
server/src/: filters.rs  handlers.rs  lib.rs  main.rs  model.rs  schema.rs
server/src/src/: schema.rs
