[package]
name = "virus-vs-toilettenpapier"
version = "0.1.0"
authors = ["Miroslav Zoricak <miroslav.zoricak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
