[package]
name = "virus-vs-toilettenpapier"
version = "0.1.0"
authors = ["Miroslav Zoricak <miroslav.zoricak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.0.0", features = ["postgres", "numeric", "chrono", "r2d2"] }
diesel-geography = { version = "0.2.0", features = ["serde"] } 
dotenv = "0.9.0"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.8", features = ["macros"] }
warp = "0.2"
